--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -225,11 +225,6 @@ $input-height-xs: $input-btn-height-xs !default;
 $input-height-sm: $input-btn-height-sm !default;
 $input-height-md: $input-btn-height-md !default;
 $input-height-lg: $input-btn-height-lg !default;
-// input label height
-$input-label-height: 1.375rem !default;
-$input-label-height-sm: 1.25rem !default;
-$input-label-height-md: 1.375rem !default;
-$input-label-height-lg: 2.25rem !default;
 // others
 $input-focus-border-color: $primary !default;
 $input-btn-focus-box-shadow: none !default;
